[metadata]
name = pydentic
description = Pydantic Identifiers
version = attr: pydentic.__version__
author = Nuno André
author_email = mail@nunoand.re
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
project_urls =
    Source = https://github.com/nuno-andre/pydentic
    Bug Tracker = https://github.com/nuno-andre/pydentic/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Typing :: Typed
platforms = any

[options]
zip_safe = false
python_requires = >= 3.6.1
package_dir =
    =src
packages = find:
setup_requires =
    setuptools >= 40.9.0
    wheel >= 0.32
install_requires =
    python-stdnum >= 1.16
    typing-extensions >= 3.7.4.3; python_version < '3.8'
include_package_data = true

[options.packages.find]
where = src
exclude =
    tests*

[options.extras_require]
dev =
    flake8
docs =
    sphinx
test =
    pytest
    pydantic

[options.package_data]
pydentic =
    py.typed

[flake8]
ignore =
    E221,  # multiple spaces before operator
    E241,  # multiple spaces after ':'
exclude =
    .git,
    __pycache__
per-file-ignores =
    **/_meta.py: F401,  # '' imported but unused
    **/__init__.py: F401
max-complexity = 10
max-line-length = 80
inline-quotes = single
multiline-quotes = single
docstring-quotes = single

[tool:pytest]
log_cli = true
log_cli_level = INFO
log_file = pytest.log
log_file_level = DEBUG
norecursedirs = src docs .git
